scripts/seo/__tests__/fixtures/r-seo-09/negative/05-handle-sitemap/base.tsx
export const handle = {
  sitemap: {
    priority: 0.5,
    changefreq: "weekly",
  },
};

export default function Page() {
  return <div />;
}
